--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-		<title>Run 3: Play in Browser, Fullscreen, Ad-Free</title>
-
-    <meta name="robots" content="noindex,nofollow" />
-    <meta name="description" content="Run 3: cool game, ad-free and free to play. Navigate through space tunnels, conquer challenges. Endless fun for students!" />
+		<title>Run 3: Play in Browser, Unblocked, Fullscreen, Ad-Free</title>
+    <meta name="description" content="Run 3: cool game, Unblocked, ad-free and free to play. Navigate through space tunnels, conquer challenges. Endless fun for students!" />
 
 
 						<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
