--- a/play/puppet-master.html
+++ b/play/puppet-master.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>Puppet Master - Run-3-online.Github.io</title>
+		<title>Run-3-online.Github.io</title>
     <meta name="robots" content="noindex,nofollow" />
   	<style type="text/css">
 .report-modal {
